# LinearRegression

./: .gitignore  README.md  setup.cfg  setup.py
regpy/: linreg.py  linregpy.py
src/: linregpy.py
test/: linregtest.py
