[metadata]
name = regpy
version = 1.0.0
description = this package allows you to painlessly plot linear regressions
author = jly02
url = https://github.com/jly02/regpy
license = MIT
license_file = LICENSE

[options]
install_requires =
    numpy
    matplotlib
packages = find:

[options.packages.find]
exclude = test
